MDEV-37633 Connect UDF functions push empty string warning.

BsonGet_String and JsonGet_String with a NULL argument
push an empty string warning which is the default contents
of g->Message.

In push_warning in the server, there is a Debug assertion
that the string doesn't end in \n. This looks before
the last null of the string, which in this case is
before the buffer. This results in a UBSAN error as
its a pointer overflow/underflow.

Correct by adding an "Argument is NULL" as the warning
message.

Also corrected the JsonGet_String to error if the Value
failed to allocate a buffer in its constructor.